Stop height changing after scroll on small screens

--- a/crisp/assets/styles/crisp.css
+++ b/crisp/assets/styles/crisp.css
@@ -271,7 +271,7 @@ footer a:hover {
 		-moz-border-radius: 0em;
 		-webkit-border-radius: 0em;
 		position:static;
-		/*height:auto;*/
+		height:auto;
 		width:auto;
 		text-align:center;
 		/*padding-bottom: 1em;*/
